--- a/move-to-cdn/css/ebi-global.css
+++ b/move-to-cdn/css/ebi-global.css
@@ -250,7 +250,7 @@ a:active {
   #ebi-footer-meta { font-size: 85%; margin-bottom: 9px;}
   #ebi-footer-meta p.address { color: #888; }
 
-  .serif { font-family: 'minion pro', 'georgia', serif;  font-size: 1.1rem; }
+  .serif { font-family: 'EB Garamond', 'georgia', serif;  font-size: 1.1rem; }
 
 /* icon to indicate link is a PDF file */
 a span.link-pdf { background: url(http://www.ebi.ac.uk/inc/images/icon_pdf.gif) right center no-repeat; padding: 0 18px 0 0; }
