--- a/move-to-cdn/fonts/fonts.css
+++ b/move-to-cdn/fonts/fonts.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'EB Garamond';
+  font-style: normal;
+  font-weight: 400;
+  src: local('EB Garamond'), local('EBGaramond'), url(https://fonts.gstatic.com/s/ebgaramond/v7/kYZt1bJ8UsGAPRGnkXPeFYgp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
+/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;*/
+}
+
 /* Load our custom font file */
 @font-face {
   font-family: 'HelveticaNeueLT Pro';
@@ -11,6 +19,7 @@
   font-style: normal;
 }
 
+@import url(https://fonts.googleapis.com/css?family=EB+Garamond);
 /* Icons
 =================================================== */
 /* Biological concepts and top-level icons (e.g. Services, Research, etc. */
