Adds Magellan menu and merges existing EBI style guide ino

--- a/move-to-cdn/css/ebi-global.css
+++ b/move-to-cdn/css/ebi-global.css
@@ -170,7 +170,7 @@ a:active {
   /* Local menu styling */
   #local-masthead nav { font-size: .9rem; clear: both; }
 
-  #local-masthead .masthead nav i { line-height: .9em; }
+  #local-masthead .masthead nav i { line-height: .9em; font-size: .8em; margin-top: -3px; }
   #local-masthead nav ul.menu li { border-right: 1px solid #f8f8f8; float: left; }
   #local-masthead nav ul.menu li:last-child,
   #local-masthead nav ul.menu li.active { border-right: 0; }
@@ -246,6 +246,19 @@ a:active {
   ul.menu.dropdown ul.menu { display: none; }
   ul.menu.dropdown ul.menu .is-dropdown-submenu { display: auto; }
 
+  /* active sidebar items */
+  .menu > li > a.active { font-weight: bold; }
+
+  /* dropdown arrow */
+  body .dropdown.menu .has-submenu.is-down-arrow > a::after {
+    border-color: rgba(0,0,0,.4) transparent transparent;
+  }
+  body .dropdown.menu .has-submenu.is-right-arrow > a::after {
+    border-color: transparent transparent transparent rgba(0,0,0,.4);
+  }
+  body .menu.dropdown.float-right > .has-submenu.is-down-arrow > a::after {
+    border-color: #fff transparent transparent;
+  }
   
   /* ebi icon font in the local title */
   .hexagon {
