--- a/move-to-cdn/css/ebi-global.css
+++ b/move-to-cdn/css/ebi-global.css
@@ -311,7 +311,7 @@ a:active {
     border-color: #fff transparent transparent;
     border-top-style: solid;
     position: absolute;
-    top: 20px;
+    top: 22px;
     margin-left: 57px;
 }
 
@@ -358,6 +358,10 @@ a:active {
   #ebi-footer-meta p.address { color: #888; }
 
   .serif { font-family: 'EB Garamond', 'georgia', serif;  font-size: 1.1rem; }
+  .sans-serif { font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;  font-size: 1.1rem; }
+  .serif .sans-serif { font-size: 1rem; }
+
+  body .has-tip { font-weight: normal; line-height: 1em; background: rgba(0,0,0,.03); }
 
 /* buttons */
 .button:focus,
